--- a/package.json
+++ b/package.json
@@ -11,8 +11,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-merge": "^0.13.0",
     "webpack-super-dev-server": "^1.2.0"
+  },
+  "dependencies": {
+    "node-uuid": "^1.4.7",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
